# oxidelta

./: ANNOUNCEMENT.md  ARCHITECTURE.md  COMPATIBILITY.md  Cargo.toml  LICENSE  MIGRATION.md  PERFORMANCE.md  README.md
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  ci.yml  release-matrix.yml  release.yml
benches/: criterion_benchmarks.rs
docs/: benchmarks.md  rust-architecture.md  xdelta-analysis.md
examples/: basic_encode_decode.rs  bench.rs  custom_backend.rs  integration_pipeline.rs  library_usage.rs  ratio_debug.rs  trace_hash.rs  trace_hash2.rs  trace_match.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_fuzz.rs  encoder_decoder_fuzz.rs  parser_fuzz.rs  roundtrip_fuzz.rs
scripts/: bench_compare.ps1  migrate-from-xdelta.sh  pgo_bench.ps1  pgo_train.ps1  xdelta-compat-wrapper.sh
src/: cli.rs  engine.rs  io.rs  lib.rs  main.rs
src/compress/: decoder.rs  encoder.rs  mod.rs  pipeline.rs  secondary.rs
src/hash/: config.rs  matching.rs  mod.rs  rolling.rs  table.rs
src/vcdiff/: address_cache.rs  code_table.rs  decoder.rs  encoder.rs  header.rs  mod.rs  varint.rs
tests/: cli_integration.rs  compress_integration.rs  large_file_integration.rs  proptest_properties.proptest-regressions  proptest_properties.rs  regression_vectors.rs  vcdiff_integration.rs
tests/vectors/: manifest.tsv
